logs/dag_id=run_fill_procedure/run_id=manual__2024-07-18T160646.389079+0000/task_id=fill_dm_account_balance_f/attempt=1.log
[2024-07-18T16:07:05.754+0000] {local_task_job_runner.py:120} INFO - ::group::Pre task execution logs
[2024-07-18T16:07:05.783+0000] {taskinstance.py:2076} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: run_fill_procedure.fill_dm_account_balance_f manual__2024-07-18T16:06:46.389079+00:00 [queued]>
[2024-07-18T16:07:05.792+0000] {taskinstance.py:2076} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: run_fill_procedure.fill_dm_account_balance_f manual__2024-07-18T16:06:46.389079+00:00 [queued]>
[2024-07-18T16:07:05.793+0000] {taskinstance.py:2306} INFO - Starting attempt 1 of 2
[2024-07-18T16:07:05.806+0000] {taskinstance.py:2330} INFO - Executing <Task(PythonOperator): fill_dm_account_balance_f> on 2024-07-18 16:06:46.389079+00:00
[2024-07-18T16:07:05.815+0000] {standard_task_runner.py:90} INFO - Running: ['***', 'tasks', 'run', 'run_fill_procedure', 'fill_dm_account_balance_f', 'manual__2024-07-18T16:06:46.389079+00:00', '--job-id', '458', '--raw', '--subdir', 'DAGS_FOLDER/create_and_fill_proc.py', '--cfg-path', '/tmp/tmppgtjrm7l']
[2024-07-18T16:07:05.817+0000] {standard_task_runner.py:91} INFO - Job 458: Subtask fill_dm_account_balance_f
[2024-07-18T16:07:05.817+0000] {logging_mixin.py:188} WARNING - /home/***/.local/lib/python3.12/site-packages/***/task/task_runner/standard_task_runner.py:61 DeprecationWarning: This process (pid=7196) is multi-threaded, use of fork() may lead to deadlocks in the child.
[2024-07-18T16:07:05.818+0000] {standard_task_runner.py:63} INFO - Started process 7197 to run task
[2024-07-18T16:07:05.859+0000] {task_command.py:426} INFO - Running <TaskInstance: run_fill_procedure.fill_dm_account_balance_f manual__2024-07-18T16:06:46.389079+00:00 [running]> on host 7c7e02e57379
[2024-07-18T16:07:05.935+0000] {taskinstance.py:2648} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='***' AIRFLOW_CTX_DAG_ID='run_fill_procedure' AIRFLOW_CTX_TASK_ID='fill_dm_account_balance_f' AIRFLOW_CTX_EXECUTION_DATE='2024-07-18T16:06:46.389079+00:00' AIRFLOW_CTX_TRY_NUMBER='1' AIRFLOW_CTX_DAG_RUN_ID='manual__2024-07-18T16:06:46.389079+00:00'
[2024-07-18T16:07:05.936+0000] {taskinstance.py:430} INFO - ::endgroup::
[2024-07-18T16:07:05.954+0000] {base.py:84} INFO - Using connection ID 'postgres_default' for task execution.
[2024-07-18T16:07:05.962+0000] {taskinstance.py:441} INFO - ::group::Post task execution logs
[2024-07-18T16:07:05.963+0000] {taskinstance.py:2905} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 465, in _execute_task
    result = _execute_callable(context=context, **execute_callable_kwargs)
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 432, in _execute_callable
    return execute_callable(context=context, **execute_callable_kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/baseoperator.py", line 401, in wrapper
    return func(self, *args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/operators/python.py", line 235, in execute
    return_value = self.execute_callable()
                   ^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/operators/python.py", line 252, in execute_callable
    return self.python_callable(*self.op_args, **self.op_kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/opt/airflow/dags/create_and_fill_proc.py", line 172, in fill_dm_account_balance_f
    cursor.execute(sql)
psycopg2.errors.SyntaxError: unterminated dollar-quoted string at or near "$$
        declare
            d date := '2018-01-01';
            start_time timestamp := now();
            log_id_temp int;
        begin
            insert into logs.logs(start_time, status)
            values (start_time, 'Start_fill_account_balance')
            returning log_id into log_id_temp;

            while <= '2018-01-31' loop
            call dm.fill_account_balance_f(d);
            d := d + interval '1 day';
            end loop;

            update logs.logs
            set end_time = now(), status = 'Finished_fill_account_balance'
            where log_id = log_id_temp;
    "
LINE 2:     do $$
               ^

[2024-07-18T16:07:05.977+0000] {taskinstance.py:1206} INFO - Marking task as UP_FOR_RETRY. dag_id=run_fill_procedure, task_id=fill_dm_account_balance_f, run_id=manual__2024-07-18T16:06:46.389079+00:00, execution_date=20240718T160646, start_date=20240718T160705, end_date=20240718T160705
[2024-07-18T16:07:05.987+0000] {standard_task_runner.py:110} ERROR - Failed to execute job 458 for task fill_dm_account_balance_f (unterminated dollar-quoted string at or near "$$
        declare
            d date := '2018-01-01';
            start_time timestamp := now();
            log_id_temp int;
        begin
            insert into logs.logs(start_time, status)
            values (start_time, 'Start_fill_account_balance')
            returning log_id into log_id_temp;

            while <= '2018-01-31' loop
            call dm.fill_account_balance_f(d);
            d := d + interval '1 day';
            end loop;

            update logs.logs
            set end_time = now(), status = 'Finished_fill_account_balance'
            where log_id = log_id_temp;
    "
LINE 2:     do $$
               ^
; 7197)
[2024-07-18T16:07:06.006+0000] {local_task_job_runner.py:240} INFO - Task exited with return code 1
[2024-07-18T16:07:06.025+0000] {taskinstance.py:3503} INFO - 0 downstream tasks scheduled from follow-on schedule check
[2024-07-18T16:07:06.027+0000] {local_task_job_runner.py:222} INFO - ::endgroup::
